# resample_image

./: .gitignore  Makefile  Makefile.in  README.html  README.ipynb  README.md  aclocal.m4  configure  configure.ac  gpc.h  poly_clip.c  repro_img.c  repro_img.h  resample_image.par  resample_image.t  resample_img.c  resample_img.h  t_repro_img.c
Doc/: README.html  README.ipynb  README.md  slides.py
src/: Makefile.am  Makefile.in  README.ipynb  README.md  poly_clip.c  resample_img.c  t_resample_img.c
test/: Makefile.am  Makefile.in  resample_image.t
wrapper/: Makefile.am  Makefile.in
